# Nephilos

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  arp_spoof.c  arpspoof.c  get_interfaces.c  send_icmp_to_all.c  send_request.c
app/src/main/java/com/blackghost/nephilos/: MainActivity.java
app/src/main/java/com/blackghost/nephilos/Class/: MacScannerTask.java  PortScannerTask.java  WifiScannerTask.java
app/src/main/java/com/blackghost/nephilos/Fragments/: ArpSpoofFragment.java  DNSLookupFragment.java  HTTPRequestFragment.java  MacScannerFragment.java  MainFragment.java  PortScannerFragment.java  RequestFragment.java  SettingsFragment.java  WifiScannerFragment.java
app/src/main/java/com/blackghost/nephilos/Interfaces/: RequestInterface.java  WifiScannerInterface.java
app/src/main/java/com/blackghost/nephilos/Managers/: ApkManager.java  DNSManager.java  LibraryManager.java  (+1 more)
app/src/main/java/com/example/nephilos/: MainActivity.java
app/src/main/res/drawable/: arp.xml  baseline_settings_24.xml  button_border.xml  dns_24.xml  edit_text_background.xml  http_24.xml  ic_baseline_storage_24.xml  ic_baseline_wifi_24.xml  mac.xml  save_24.xml  wifi_24.xml
app/src/main/res/layout/: activity_main.xml  fragment_arp_spoof.xml  fragment_dns_lookup.xml  fragment_mac_scanner.xml  fragment_main.xml  fragment_port_scanner.xml  fragment_request.xml  fragment_wifi_scanner.xml  header.xml  item_wifi.xml
app/src/main/res/menu/: menu_bar.xml  tool_bar.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/xml/: preferences.xml
gradle/wrapper/: gradle-wrapper.properties
(+12 files in other folders)
